--- a/Pages/HTML/template.html
+++ b/Pages/HTML/template.html
@@ -7,8 +7,13 @@
 </head>
 <body>
     <div class="main-wrapper">
-        <div class="GeoGebra">
-            <iframe src="https://www.geogebra.org/classic/dybbrb5d?embed" width="800" height="600" allowfullscreen style="border: 1px solid #e4e4e4;border-radius: 4px;" frameborder="0"></iframe>
+        <div class="opdracht">
+            <h1>Welkom bij opgave ...</h1>
+            
+        </div>
+
+        <div class="geogebra">
+            <iframe align="right" src="https://www.geogebra.org/classic/dybbrb5d?embed" width="800" height="600" allowfullscreen style= border-radius:4px;" frameborder="0"></iframe>
         </div>
 
         <div class="Uitwerkingen">
