ik snap css niet

--- a/Pages/HTML/theorie1.html
+++ b/Pages/HTML/theorie1.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Theorie 1</title>
-    <link rel="stylesheet" href="theorie.css">
+    <link rel="stylesheet" href="/Pages/CSS/theorie.css">
 </head>
 <body>
-    <a href="theorie_hub.html" class="button">Terug naar Theorie?</a>
+    <form action="theorie_hub.html" method="post">
+        <input class="button" type="submit" value="Terug naar Theorie?"></input>
+    </form>
+    <a class="fcc-btn" href="theorie_hub.html">theorie</a>
     <h1>Dit is de pagina voor de eerste theorie</h1>
 </body>
 </html>
