--- a/example.html
+++ b/example.html
@@ -7,8 +7,8 @@
     <!-- Script for Bootstrap -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" href="./pages/CSS/index.css">
-    <title>Olivier | Homepage</title>
+    <link rel="stylesheet" href="...">
+    <title>... | ...</title>
 </head>
 
 <body>
@@ -34,7 +34,7 @@
                             <a class="dropdown-item" href="#">Getal en Ruimte VWO 4</a>
                             <a class="dropdown-item" href="#">Getal en Ruimte VWO 5</a>
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="./pages/HTML/library.html">Alle opdrachten</a>
+                            <a class="dropdown-item" href="#">Alle opdrachten</a>
                         </div>
                     </li>
                     <li class="nav-item">
@@ -56,7 +56,8 @@
                     <div class="dropdown-menu">
                         <form class="form-horizontal" method="post" accept-charset="UTF-8">
                             <input class="form-control login" type="text" name="username" placeholder="Username.."><br>
-                            <input class="form-control login" type="password" name="password" placeholder="Password.."><br>
+                            <input class="form-control login" type="password" name="password"
+                                placeholder="Password.."><br>
                             <input class="btn btn-primary" type="submit" name="submit" value="Login">
                         </form>
                     </div>
@@ -64,9 +65,13 @@
             </div>
         </nav>
     </header>
-    
+
     <br><br><br><br>
-    <h3>FUCK YEHAH</h1>
+
+    <!-- Hier beginnen met typen. -->
+
+
+    
 
 
     <!--Script for Bootstrap-->
