--- a/pages/HTML/template.html
+++ b/pages/HTML/template.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Template</title>
-    <link rel="stylesheet" href="template.css">
+    <link rel="stylesheet" href="../../styles/template.css">
 </head>
 <body>
     <div class="main-wrapper">
