--- a/pages/HTML/theorie1.html
+++ b/pages/HTML/theorie1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Theorie 1</title>
-    <link rel="stylesheet" href="/Pages/CSS/theorie.css">
+    <link rel="stylesheet" href="../../styles/theorie.css">
     <!-- Script for Bootstrap -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
