--- a/pages/HTML/theorie_hub.html
+++ b/pages/HTML/theorie_hub.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Theorie</title>
-    <link rel="stylesheet" href="/Pages/CSS/theorie.css">
+    <link rel="stylesheet" href="../../styles/theorie.css">
 </head>
 <body>
     <div class="main-wrapper">
