--- a/pages/HTML/opzet_vraag.html
+++ b/pages/HTML/opzet_vraag.html
@@ -1,24 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Opdracht</title>
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
-    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-    integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
+        integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
 
     <link rel="stylesheet" href="../../styles/vragen.css">
 
-    <script type="module" src="../JS/vragen.js"></script>
+
 </head>
+
 <body>
     <header>
         <nav class="navbar fixed-top navbar-expand-sm navbar-light bg-light py-3" style="background-color: #0d1117;">
-            <a class="navbar-brand" href="#">GeoAnalyses</a>
+            <a class="navbar-brand" href="../../index.html">GeoAnalyses</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -26,26 +28,35 @@
 
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-                    </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                             data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             Library
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="#">Getal en Ruimte VWO 4</a>
-                            <a class="dropdown-item" href="#">Getal en Ruimte VWO 5</a>
+                            <a class="dropdown-item" href="./libraryvwo4.html">Getal en Ruimte VWO 4</a>
+                            <a class="dropdown-item" href="./libraryvwo5.html">Getal en Ruimte VWO 5</a>
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#">Alle opdrachten</a>
+                            <a class="dropdown-item" href="./library.html">Alle opdrachten</a>
+                        </div>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Theorie
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="./theorievwo4.html">Getal en Ruimte VWO 4</a>
+                            <a class="dropdown-item" href="./theorievwo5.html">Getal en Ruimte VWO 5</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="./theorie.html">Alle theorie</a>
                         </div>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Hoe werkt het?</a>
+                        <a class="nav-link" href="./hoewerkthet.html">Hoe werkt het?</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contact</a>
+                        <a class="nav-link" href="./contact.html">Contact</a>
                     </li>
                 </ul>
                 <form class="form-inline my-2 my-lg-0 mx-auto">
@@ -57,7 +68,7 @@
                         aria-haspopup="true" aria-expanded="false">
                         Login
                     </button>
-                    <div class="dropdown-menu">
+                    <div class="dropdown-menu" style="right: 0; left: unset;">
                         <form class="form-horizontal" method="post" accept-charset="UTF-8">
                             <input class="form-control login" type="text" name="username" placeholder="Username.."><br>
                             <input class="form-control login" type="password" name="password"
@@ -72,19 +83,23 @@
 
     <br><br><br><br>
     <h3>Opdracht 1</h3>
-      <!--Ik weet nog niet hoe ik popovers moet initializen, moet volgens mij met javascript in combinatie met een popper plugin maar dat werkt nog niet lekker-->
-    <button type="button" class="btn btn-lg btn-danger" data-bs-toggle="popover" data-bs-title="Popover title" data-bs-content="And here's some amazing content. It's very engaging. Right?">Click to toggle popover</button>
-    
-    <button type="button" class="btn btn-secondary" data-bs-container="body" data-bs-toggle="popover" data-bs-placement="top" data-bs-content="Top popover">
+    <!--Ik weet nog niet hoe ik popovers moet initializen, moet volgens mij met javascript in combinatie met een popper plugin maar dat werkt nog niet lekker-->
+
+
+    <button type="button" class="btn btn-secondary" data-container="body" data-toggle="popover" data-placement="top"
+        data-content="Top popover">
         Popover on top
     </button>
-    <button type="button" class="btn btn-secondary" data-bs-container="body" data-bs-toggle="popover" data-bs-placement="right" data-bs-content="Right popover">
+    <button type="button" class="btn btn-secondary" data-container="body" data-toggle="popover" data-placement="right"
+        data-content="Right popover">
         Popover on right
     </button>
-    <button type="button" class="btn btn-secondary" data-bs-container="body" data-bs-toggle="popover" data-bs-placement="bottom" data-bs-content="Bottom popover">
+    <button type="button" class="btn btn-secondary" data-container="body" data-toggle="popover" data-placement="bottom"
+        data-content="Bottom popover">
         Popover on bottom
     </button>
-    <button type="button" class="btn btn-secondary" data-bs-container="body" data-bs-toggle="popover" data-bs-placement="left" data-bs-content="Left popover">
+    <button type="button" class="btn btn-secondary" data-container="body" data-toggle="popover" data-placement="left"
+        data-content="Left popover">
         Popover on left
     </button>
 
@@ -120,5 +135,19 @@
         </tr>
     </table>
 
+
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct"
+        crossorigin="anonymous"></script>
+    <script>
+        $(function () {
+            $('[data-toggle="popover"]').popover()
+        })
+    </script>
+
 </body>
+
 </html>
