--- a/pages/HTML/library.html
+++ b/pages/HTML/library.html
@@ -87,10 +87,11 @@
                 <img src="../../assets/computer.png">
             </div>
             <div class="content">
-                <h2>Lesson #1</h2>
-                <p>Deze les gaat over figuren.</p>
-                <span>Hocus pocus pilatus pas</span>
-                <button>START</button>
+                <h2>Les #1</h2>
+                <p>Deze les gaat over <b>de eenheidscirkel.</b></p>
+                <span>In deze les wordt de eenheidscirkel door</span>
+                <br><span>middel van een plaatje duidelijk gemaakt.</span>
+                <button onclick="start_opgave1()">START</button>
             </div>
         </div>
 
@@ -99,10 +100,10 @@
                 <img src="../../assets/computer.png">
             </div>
             <div class="content">
-                <h2>Lesson #2</h2>
+                <h2>Les #2</h2>
                 <p>Deze les gaat over figuren.</p>
                 <span>Hocus pocus pilatus pas</span>
-                <button>START</button>
+                <button onclick="start_opgave2()">START</button>
             </div>
         </div>
 
@@ -111,10 +112,10 @@
                 <img src="../../assets/computer.png">
             </div>
             <div class="content">
-                <h2>Lesson #3</h2>
+                <h2>Les #3</h2>
                 <p>Deze les gaat over figuren.</p>
                 <span>Hocus pocus pilatus pas</span>
-                <button>START</button>
+                <button onclick="start_opgave3()">START</button>
             </div>
         </div>
 
@@ -123,10 +124,10 @@
                 <img src="../../assets/computer.png">
             </div>
             <div class="content">
-                <h2>Lesson #4</h2>
+                <h2>Les #4</h2>
                 <p>Deze les gaat over figuren.</p>
                 <span>Hocus pocus pilatus pas</span>
-                <button>START</button>
+                <button onclick="start_opgave4()">START</button>
             </div>
         </div>
 
@@ -143,6 +144,12 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
+
+    <script>
+        function start_opgave1() {
+            window.open("opzet_vraag.html","_self");
+        }
+    </script>
 </body>
 
 </html>
