--- a/pages/HTML/libraryvwo4.html
+++ b/pages/HTML/libraryvwo4.html
@@ -10,7 +10,7 @@
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <!--  -->
 
-    <link rel="stylesheet" href="./pages/CSS/index.css">
+    <link rel="stylesheet" href="../../styles/index.css">
     <title>GeoAnalyses | ...</title>
 </head>
 
@@ -81,6 +81,13 @@
     <br><br><br><br>
 
     <!-- Hier beginnen met typen -->
+
+    <h3 class="welkom">Welkom bij de bibliotheek voor vwo 4</h3>
+
+    <br><br>
+
+    <h3 class="opdrachten">Hieronder de opdrachten:</h3>
+
 
     <!--Script for Bootstrap-->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
