--- a/pages/HTML/opzet_vraag.html
+++ b/pages/HTML/opzet_vraag.html
@@ -83,7 +83,8 @@
 
     <br><br><br><br>
     <h3>Opdracht 1</h3>
-    <!--Ik weet nog niet hoe ik popovers moet initializen, moet volgens mij met javascript in combinatie met een popper plugin maar dat werkt nog niet lekker-->
+    <!--Ik weet nog niet hoe ik popovers moet initializen, moet volgens mij met javascript in combinatie met een popper plugin maar dat werkt nog niet lekker
+    FF dit comment gemaakt omdat we uiteindelijk alleen dismissible popovers gebruiken.
 
 
     <button type="button" class="btn btn-secondary" data-container="body" data-toggle="popover" data-placement="top"
@@ -102,6 +103,10 @@
         data-content="Left popover">
         Popover on left
     </button>
+    -->
+    <a tabindex="0" class="btn btn-lg btn-danger" role="button" data-toggle="popover" data-trigger="focus"
+        title="Theorie"
+        data-content="Hier komt de theorie die hoort bij de vraag. Dat is mooi zeg.">Theorie</a>
 
     <br><br><br><br>
 
@@ -145,6 +150,9 @@
     <script>
         $(function () {
             $('[data-toggle="popover"]').popover()
+        })
+        $('.popover-dismiss').popover({
+            trigger: 'focus'
         })
     </script>
 
