--- a/pages/HTML/opzet_vraag.html
+++ b/pages/HTML/opzet_vraag.html
@@ -89,7 +89,7 @@
     <p>Deze opdracht komt overeen met vraag 7 in je werkboek.</p>
     <p>Bij deze opdracht is te zien dat het verplaatsen van punt B op de eenheidscirkel
         er voor zorgt dat de hoek tot punt B ook veranderd.</p>
-    <p>Kijk door het verschuiven van
+    <p>Kijk door het verschuiven van.
         punt B op de eenheidscirkel wat dit betekent voor de hoek a.</p>
     <p>Tip: De cos(a) veranderd met de x-waarde van B, en de sin(a) veranderd met de y-waarde van B</p>
     
@@ -104,6 +104,12 @@
     <a tabindex="0" class="btn btn-lg btn-danger" role="button" data-toggle="popover" data-trigger="focus"
         title="Theorie"
         data-content="Hier komt de theorie die hoort bij de vraag. Dat is mooi zeg.">Theorie</a>
+
+    <a tabindex="0" class="btn btn-lg btn-danger" role="button" data-toggle="popover" data-trigger="focus"
+    title="Uitwerkingen"
+    data-content="A: De X wordt gegeven. Gebruik daarom de Cosinus. Cos(a)=0,81 in de GR geeft 35,90...°. Afgerond is de hoek a dus ≈ 35,9°.
+    B: De Y wordt gegeven. Gebruik daarom de Sinus. Sin(a)=0,94 in de GR geeft 70,05...°. In het plaatje is te zien dat punt B voorbij de 90° komt.
+    Dit betekend dat er eerst 180° - het antwoord moet worden gedaan. Op deze manier kom je uit op a ≈ 180° - 70,1° ≈ 109,9°">Uitwerkingen</a>
 
         <iframe scrolling="no" frameBorder="0" title="Eenheidscirkel"
             src="https://www.geogebra.org/material/iframe/id/c9dq6qrb/width/1000/height/569/border/ffffff/sfsb/true/smb/false/stb/false/stbh/false/ai/false/asb/false/sri/false/rc/false/ld/false/sdz/false/ctl/false"
