--- a/pages/HTML/library.html
+++ b/pages/HTML/library.html
@@ -81,7 +81,7 @@
 
 
     <div class="container">
-        <h1>Lessons</h1>
+        <h1>LESSEN</h1>
         <div class="lesson">
             <div class="icon">
                 <img src="../../assets/computer.png">
@@ -90,8 +90,8 @@
                 <h2>Les #1</h2>
                 <p>Deze les gaat over <b>de eenheidscirkel.</b></p>
                 <span>In deze les wordt de eenheidscirkel door</span>
-                <br><span>middel van een plaatje duidelijk gemaakt.</span>
-                <button onclick="start_opgave1()">START</button>
+                <br><span>middel van een interactief plaatje duidelijk gemaakt.</span>
+                <button onclick="start_opgave1()" style="top: 20%; display: flex;">START</button>
             </div>
         </div>
 
@@ -149,6 +149,7 @@
         function start_opgave1() {
             window.open("opzet_vraag.html","_self");
         }
+
     </script>
 </body>
 
