--- a/pages/HTML/opzet_vraag2.html
+++ b/pages/HTML/opzet_vraag2.html
@@ -85,20 +85,10 @@
     <br><br><br><br>
     <div class="body-text">
 
-        <h3>Opdracht 1</h3>
+        <h3>Opdracht 2</h3>
 
-        <p>Deze opdracht komt overeen met vraag 7 in je werkboek.</p>
-        <p>Bij deze opdracht is te zien dat het verplaatsen van punt B op de eenheidscirkel
-            er voor zorgt dat de hoek tot punt B ook veranderd.</p>
-        <p>Kijk door het verschuiven van
-            punt B op de eenheidscirkel wat dit betekent voor de hoek a.</p>
-        <p>Tip: De cos(a) veranderd met de x-waarde van B, en de sin(a) veranderd met de y-waarde van B</p>
-
-
-        <p><b> 7A.</b> Xb = 0,81</p>
-        <p><b> 7B.</b> Yb = 0,94</p>
-        <p><b> 7C.</b> Xb = 0,26</p>
-        <p><b> 7D.</b> Yb = -0,22</p>
+        <p>Deze opdracht komt overeen met vraag ? in je werkboek.</p>
+        <p>Hier moeten we nog even wat voor bedenken :) </p>
 
 
 
@@ -130,9 +120,9 @@
         <div class="push"></div>
     </div>
     <footer class="footer">
-        <button type="button" class="btn btn-primary" id="startbutton">Vorige</button>
-        <p>Opdracht 1</p>
-        <button type="button" class="btn btn-primary" onclick="start_opgave2()">Volgende</button>
+        <button type="button" class="btn btn-primary" onclick="start_opgave1()">Vorige</button>
+        <p>Opdracht 2</p>
+        <button type="button" class="btn btn-primary" onclick="start_opgave3()">Volgende</button>
     </footer>
 
     <div>
