--- a/index.html
+++ b/index.html
@@ -80,11 +80,11 @@
  
 
     <div class="jumbotron">
-        <h1 class="display-4">Hello, world!</h1>
-        <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+        <h1 class="display-4">Hallo!</h1>
+        <p class="lead">Welkom op de website van GeoAnalyses, de beste methode om jouw wiskunde skills te beoefenen.</p>
         <hr class="my-4">
-        <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-        <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+        <p>Klik hier om naar de opdrachten te gaan.</p>
+        <a class="btn btn-primary btn-lg" href="./pages/HTML/library.html" role="button">Ga naar</a>
     </div>
 
     <div id="carouselExampleInterval" class="carousel slide" data-ride="carousel">
