--- a/pages/HTML/login.html
+++ b/pages/HTML/login.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container" id="signup" style="display:none;">
       <h1 class="form-title">Register</h1>
-      <form action="">
+      <form method="post" action="">
         <div id="signUpMessage" class="messageDiv" style="display:none;"></div>
         <div class="input-group">
            <i class="fas fa-user"></i>
@@ -50,7 +50,7 @@
 
   <div class="container" id="signIn">
         <h1 class="form-title">Sign In</h1>
-        <form action="">
+        <form method="post" action="">
           <div id="signInMessage" class="messageDiv" style="display:none;"></div>
 
           <div class="input-group">
