--- a/pages/HTML/library.html
+++ b/pages/HTML/library.html
@@ -91,7 +91,7 @@
                 <p>Deze les gaat over <b>de eenheidscirkel.</b></p>
                 <span>In deze les wordt de eenheidscirkel door</span>
                 <br><span>middel van een interactief plaatje duidelijk gemaakt.</span>
-                <button onclick="start_opgave1()" style="top: 20%; display: flex;">START</button>
+                <button id="knop" onclick="start_opgave1()">START</button>
             </div>
         </div>
 
@@ -101,9 +101,9 @@
             </div>
             <div class="content">
                 <h2>Les #2</h2>
-                <p>Deze les gaat over figuren.</p>
-                <span>Hocus pocus pilatus pas</span>
-                <button onclick="start_opgave2()">START</button>
+                <p>Deze les gaat over ...</p>
+                <span>beschrijving</span>
+                <button onclick="start_opgave2()" >START</button>
             </div>
         </div>
 
@@ -113,8 +113,8 @@
             </div>
             <div class="content">
                 <h2>Les #3</h2>
-                <p>Deze les gaat over figuren.</p>
-                <span>Hocus pocus pilatus pas</span>
+                <p>Deze les gaat over ...</p>
+                <span>beschrijving</span>
                 <button onclick="start_opgave3()">START</button>
             </div>
         </div>
@@ -125,8 +125,8 @@
             </div>
             <div class="content">
                 <h2>Les #4</h2>
-                <p>Deze les gaat over figuren.</p>
-                <span>Hocus pocus pilatus pas</span>
+                <p>Deze les gaat over ...</p>
+                <span>beschrijving</span>
                 <button onclick="start_opgave4()">START</button>
             </div>
         </div>
