--- a/pages/HTML/account.html
+++ b/pages/HTML/account.html
@@ -42,7 +42,7 @@
             color:black;
         }
     </style>
-    <script type="module" src="./homepage.js"></script>
+    <script type="module" src="../JS/homepage.js"></script>
 </head>
 <body>
     <h1>Welcome to the Homepage</h1>
