--- a/pages/HTML/login.html
+++ b/pages/HTML/login.html
@@ -6,7 +6,7 @@
     <title>Account</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link rel="stylesheet" href="../../styles/style.css">
-    <script type="module" src="firebaseauth.js"></script>
+    <script type="module" src="../JS/firebaseauth.js"></script>
 </head>
 <body>
     <div class="container" id="signup" style="display:none;">
@@ -80,6 +80,6 @@
           <button id="signUpButton">Sign Up</button>
         </div>
       </div>
-      <script src="script.js"></script>
+      <script src="../JS/script.js"></script>
 </body>
 </html>
