--- a/pages/HTML/theorie-8.1-A.html
+++ b/pages/HTML/theorie-8.1-A.html
@@ -81,8 +81,15 @@
     <br><br><br><br>
 
     <!-- Hier beginnen met typen -->
+        
+    <div>
+        <img src="../../assets/theorie-8.1-A.png" alt="Dit kon niet geladen worden :/">
+    </div>
 
-
+    <div>
+        <img src="../../assets/theorie-8.1-A2.png" alt="Dit kon niet geladen worden :/">
+    </div>
+    
 
     <!--Script for Bootstrap-->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
