--- a/pages/HTML/opzet_vraag.html
+++ b/pages/HTML/opzet_vraag.html
@@ -121,8 +121,10 @@
 
         <!-- -->
 
-        <a tabindex="0" class="btn btn-lg btn-danger" role="button" data-toggle="popover" data-trigger="focus"
-            title="Theorie" data-content="Hier komt de theorie die hoort bij de vraag. Dat is mooi zeg.">Theorie</a>
+        <!-- <a tabindex="0" class="btn btn-lg btn-danger" role="button" data-toggle="popover" data-trigger="focus"
+            title="Theorie" data-content="Hier komt de theorie die hoort bij de vraag. Dat is mooi zeg.">Theorie</a> -->
+        
+            <button type="button" class="btn btn-primary" onclick="naar_theorie_8_1()">Theorie</button>
 
         <!-- <a tabindex="0" class="btn btn-lg btn-danger" role="button" data-toggle="popover" data-trigger="focus"
             title="Uitwerkingen"
