--- a/pages/HTML/theorie.html
+++ b/pages/HTML/theorie.html
@@ -81,7 +81,15 @@
     <br><br><br><br>
 
     <!-- Hier beginnen met typen -->
-
+    <div class="container">
+    <ul class="list-group">
+        <li class="list-group-item">Hoofdstuk 8 Paragraaf 1<button type="button" class="btn btn-primary">Ga naar</button></li>
+        <li class="list-group-item">A second item</li>
+        <li class="list-group-item">A third item</li>
+        <li class="list-group-item">A fourth item</li>
+        <li class="list-group-item">And a fifth one</li>
+      </ul>
+    </div>
 
 
     <!--Script for Bootstrap-->
