--- a/pages/HTML/library.html
+++ b/pages/HTML/library.html
@@ -91,7 +91,7 @@
                 <p>Deze les gaat over <b>de eenheidscirkel.</b></p>
                 <span>In deze les wordt de eenheidscirkel door</span>
                 <br><span>middel van een interactief plaatje duidelijk gemaakt.</span>
-                <button id="knop" onclick="start_opgave1()">START</button>
+                <button class="knop" onclick="start_opgave1()">START</button>
             </div>
         </div>
 
@@ -103,7 +103,7 @@
                 <h2>Les #2</h2>
                 <p>Deze les gaat over ...</p>
                 <span>beschrijving</span>
-                <button onclick="start_opgave2()" >START</button>
+                <button class="knop" onclick="start_opgave2()">START</button>
             </div>
         </div>
 
@@ -115,7 +115,7 @@
                 <h2>Les #3</h2>
                 <p>Deze les gaat over ...</p>
                 <span>beschrijving</span>
-                <button onclick="start_opgave3()">START</button>
+                <button class="knop" onclick="start_opgave3()">START</button>
             </div>
         </div>
 
@@ -127,10 +127,9 @@
                 <h2>Les #4</h2>
                 <p>Deze les gaat over ...</p>
                 <span>beschrijving</span>
-                <button onclick="start_opgave4()">START</button>
+                <button class="knop" onclick="start_opgave4()">START</button>
             </div>
         </div>
-
     </div>
 
 
@@ -147,9 +146,8 @@
 
     <script>
         function start_opgave1() {
-            window.open("opzet_vraag.html","_self");
+            window.open("opzet_vraag.html", "_self");
         }
-
     </script>
 </body>
 
