--- a/pages/HTML/theorie.html
+++ b/pages/HTML/theorie.html
@@ -10,7 +10,8 @@
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <!--  -->
 
-    <link rel="stylesheet" href="./pages/CSS/index.css">
+    <link rel="stylesheet" href="../../styles/theorie.css">
+    <script src="../JS/functions.js"></script>
     <title>GeoAnalyses | ...</title>
 </head>
 
@@ -81,15 +82,26 @@
     <br><br><br><br>
 
     <!-- Hier beginnen met typen -->
+    
     <div class="container">
-    <ul class="list-group">
-        <li class="list-group-item">Hoofdstuk 8 Paragraaf 1<button type="button" class="btn btn-primary">Ga naar</button></li>
-        <li class="list-group-item">A second item</li>
-        <li class="list-group-item">A third item</li>
-        <li class="list-group-item">A fourth item</li>
-        <li class="list-group-item">And a fifth one</li>
+    <ul class="list-group" style="position: relative;">
+        <li class="list-group-item">Hoofdstuk 8 Paragraaf 1<button type="button" class="btn btn-primary" onclick="open_theorie(8.1)">Ga naar</button></li>
+        <li class="list-group-item">Hoofdstuk 8 Paragraaf 2<button type="button" class="btn btn-primary">Ga naar</button></li>
+        <li class="list-group-item">Hoofdstuk 8 Paragraaf 3<button type="button" class="btn btn-primary">Ga naar</button></li>
+        <li class="list-group-item">Hoofdstuk 8 Paragraaf 4<button type="button" class="btn btn-primary">Ga naar</button></li>
+        <li class="list-group-item">Hoofdstuk 8 Paragraaf 5<button type="button" class="btn btn-primary">Ga naar</button></li>
       </ul>
     </div>
+
+    <div class="container">
+        <ul class="list-group" style="position: relative;">
+            <li class="list-group-item">Hoofdstuk 9 Paragraaf 1<button type="button" class="btn btn-primary">Ga naar</button></li>
+            <li class="list-group-item">Hoofdstuk 9 Paragraaf 2<button type="button" class="btn btn-primary">Ga naar</button></li>
+            <li class="list-group-item">Hoofdstuk 9 Paragraaf 3<button type="button" class="btn btn-primary">Ga naar</button></li>
+            <li class="list-group-item">Hoofdstuk 9 Paragraaf 4<button type="button" class="btn btn-primary">Ga naar</button></li>
+            <li class="list-group-item">Hoofdstuk 9 Paragraaf 5<button type="button" class="btn btn-primary">Ga naar</button></li>
+          </ul>
+        </div>
 
 
     <!--Script for Bootstrap-->
