--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- Script for Bootstrap -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" href="./pages/CSS/index.css">
+    <link rel="stylesheet" href="./styles/index.css">
     <title>GeoAnalyses | Homepage</title>
 </head>
 
@@ -104,30 +104,29 @@
 
     <div class="card-deck">
         <div class="card">
-          <img class="card-img-top" src="..." alt="Card image cap">
+          <img class="card-img-top" src="..." alt="image">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            <h5 class="card-title">titel</h5>
+            <p class="card-text">beschrijving</p>
+            <p class="card-text"><small class="text-muted">...</small></p>
           </div>
         </div>
         <div class="card">
-          <img class="card-img-top" src="..." alt="Card image cap">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            <img class="card-img-top" src="..." alt="image">
+            <div class="card-body">
+              <h5 class="card-title">titel</h5>
+              <p class="card-text">beschrijving</p>
+              <p class="card-text"><small class="text-muted">...</small></p>
+            </div>
           </div>
-        </div>
-        <div class="card">
-          <img class="card-img-top" src="..." alt="Card image cap">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+          <div class="card">
+            <img class="card-img-top" src="..." alt="image">
+            <div class="card-body">
+              <h5 class="card-title">titel</h5>
+              <p class="card-text">beschrijving</p>
+              <p class="card-text"><small class="text-muted">...</small></p>
+            </div>
           </div>
-        </div>
-      </div>
 
     <!--Script for Bootstrap-->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
