--- a/pages/HTML/opzet_vraag2.html
+++ b/pages/HTML/opzet_vraag2.html
@@ -90,12 +90,27 @@
         <p>Deze opdracht komt overeen met vraag ? in je werkboek.</p>
         <p>Hier moeten we nog even wat voor bedenken :) </p>
 
+        
+        <p>Zie de bijlage voor de figuur.</p>
+        <button type="button" class="btn btn-primary" data-toggle="modal" data-target=".bd-example-modal-lg">Zie de
+            bijlage</button>
+
+        <div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel"
+            aria-hidden="true">
+            <div class="modal-dialog modal-lg">
+                <div class="modal-content">
+                    <img src="../../assets/hf8-vraag7.png">
+                </div>
+            </div>
+        </div>
+
+        <br><br>
 
 
-        <a tabindex="0" class="btn btn-lg btn-danger" role="button" data-toggle="popover" data-trigger="focus"
+        <a tabindex="0" class="btn btn-lg btn-primary" role="button" data-toggle="popover" data-trigger="focus"
             title="Theorie" data-content="Hier komt de theorie die hoort bij de vraag. Dat is mooi zeg.">Theorie</a>
 
-        <a tabindex="0" class="btn btn-lg btn-danger" role="button" data-toggle="popover" data-trigger="focus"
+        <a tabindex="0" class="btn btn-lg btn-primary" role="button" data-toggle="popover" data-trigger="focus"
             title="Uitwerkingen"
             data-content="A: De X wordt gegeven. Gebruik daarom de Cosinus. Cos(a)=0,81 in de GR geeft 35,90...°. Afgerond is de hoek a dus ≈ 35,9°.
     B: De Y wordt gegeven. Gebruik daarom de Sinus. Sin(a)=0,94 in de GR geeft 70,05...°. In het plaatje is te zien dat punt B voorbij de 90° komt.
