--- a/pages/HTML/raaklijn1.html
+++ b/pages/HTML/raaklijn1.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Opdracht</title>
+    <title>Raaklijn 1</title>
 
 
 
@@ -85,10 +85,9 @@
     <br><br><br><br>
     <div class="body-text">
 
-        <h3>Opdracht 2</h3>
+        <h3>Raaklijn opdracht 1</h3>
 
-        <p>Deze opdracht komt overeen met vraag 34 uit hoofdstuk 7 in het oude boek.</p>
-        <p>Hier moeten we nog even wat voor bedenken :) </p>
+        <p>Hier komt de vraag (we moeten eerst het boek krijgen) </p>
 
         
         <p>Zie de bijlage voor de figuur.</p>
