Volgende Vorige cycle

--- a/pages/HTML/raaklijn3.html
+++ b/pages/HTML/raaklijn3.html
@@ -135,9 +135,9 @@
         <div class="push"></div>
     </div>
     <footer class="footer">
-        <button type="button" class="btn btn-primary" onclick="start_opgave1()">Vorige</button>
-        <p>Opdracht 2</p>
-        <button type="button" class="btn btn-primary" onclick="start_opgave3()">Volgende</button>
+        <button type="button" class="btn btn-primary" onclick="start_opgave_raaklijn2()">Vorige</button>
+        <p>Raaklijn 3</p>
+        <button type="button" class="btn btn-primary" onclick="start_opgave_raaklijn4()">Volgende</button>
     </footer>
 
     <div>
