--- a/pages/HTML/library.html
+++ b/pages/HTML/library.html
@@ -113,9 +113,9 @@
             </div>
             <div class="content">
                 <h2>Les #3</h2>
-                <p>Deze les gaat over ...</p>
+                <p>Deze les gaat over <b>de raaklijn</b></p>
                 <span>beschrijving</span>
-                <button class="knop" onclick="start_opgave3()">START</button>
+                <button class="knop" onclick="start_opgave_raaklijn1()">START</button>
             </div>
         </div>
 
@@ -147,6 +147,14 @@
     <script>
         function start_opgave1() {
             window.open("opzet_vraag.html", "_self");
+        }
+
+        function start_opgave2() {
+            window.open("opzet_vraag2.html","_self");
+        }
+
+        function start_opgave_raaklijn1() {
+            window.open("raaklijn1.html","_self");
         }
     </script>
 </body>
