--- a/pages/HTML/raaklijn1.html
+++ b/pages/HTML/raaklijn1.html
@@ -134,9 +134,9 @@
         <div class="push"></div>
     </div>
     <footer class="footer">
-        <button type="button" class="btn btn-primary" onclick="start_opgave1()">Vorige</button>
-        <p>Opdracht 2</p>
-        <button type="button" class="btn btn-primary" onclick="start_opgave3()">Volgende</button>
+        <button type="button" class="btn btn-primary" id="startbutton">Vorige</button>
+        <p>Raaklijn 1</p>
+        <button type="button" class="btn btn-primary" onclick="start_opgave_raaklijn2()">Volgende</button>
     </footer>
 
     <div>
