--- a/pages/HTML/raaklijn2.html
+++ b/pages/HTML/raaklijn2.html
@@ -135,9 +135,9 @@
         <div class="push"></div>
     </div>
     <footer class="footer">
-        <button type="button" class="btn btn-primary" onclick="start_opgave1()">Vorige</button>
-        <p>Opdracht 2</p>
-        <button type="button" class="btn btn-primary" onclick="start_opgave3()">Volgende</button>
+        <button type="button" class="btn btn-primary" onclick="start_opgave_raaklijn1()">Vorige</button>
+        <p>Raaklijn 2</p>
+        <button type="button" class="btn btn-primary" onclick="start_opgave_raaklijn3()">Volgende</button>
     </footer>
 
     <div>
