--- a/pages/HTML/raaklijn1.html
+++ b/pages/HTML/raaklijn1.html
@@ -116,9 +116,10 @@
     B: De Y wordt gegeven. Gebruik daarom de Sinus. Sin(a)=0,94 in de GR geeft 70,05...°. In het plaatje is te zien dat punt B voorbij de 90° komt.
     Dit betekend dat er eerst 180° - het antwoord moet worden gedaan. Op deze manier kom je uit op a ≈ 180° - 70,1° ≈ 109,9°">Uitwerkingen</a>
 
-        <iframe scrolling="no" frameBorder="0" title="Eenheidscirkel"
-            src="https://www.geogebra.org/material/iframe/id/b6cecysk/width/1000/height/569/border/ffffff/sfsb/true/smb/false/stb/false/stbh/false/ai/false/asb/false/sri/false/rc/false/ld/false/sdz/false/ctl/false"
-            width="80%" height="50%" style="position: absolute; right: -36%; top:20%"> </iframe>
+    <iframe scrolling="no"
+    src="https://www.geogebra.org/material/iframe/id/b6cecysk/width/1000/height/569/rc/false/ai/false/sdz/true/smb/false/stb/false/stbh/false/ld/false/sri/false/sfsb/false/szb/true"
+    width="80%" height="50%" style="position: absolute; right: -36%; top:20%">>
+    </iframe>
 
         <!--Nu mogelijke opdrachten aan het scouten om te behandelen-->
         <!--Paragraaf 1 heeft niet veel met GeoGebra te maken, maar het is misschien wel
