--- a/pages/HTML/opzet_vraag2.html
+++ b/pages/HTML/opzet_vraag2.html
@@ -117,7 +117,7 @@
     Dit betekend dat er eerst 180° - het antwoord moet worden gedaan. Op deze manier kom je uit op a ≈ 180° - 70,1° ≈ 109,9°">Uitwerkingen</a>
 
         <iframe scrolling="no" frameBorder="0" title="Eenheidscirkel"
-            src="https://www.geogebra.org/material/iframe/id/c9dq6qrb/width/1000/height/569/border/ffffff/sfsb/true/smb/false/stb/false/stbh/false/ai/false/asb/false/sri/false/rc/false/ld/false/sdz/false/ctl/false"
+            src="https://www.geogebra.org/material/iframe/id/fmqwbcvs/width/1000/height/600/border/ffffff/sfsb/true/smb/false/stb/false/stbh/false/ai/false/asb/false/sri/false/rc/false/ld/false/sdz/false/ctl/false"
             width="80%" height="50%" style="position: absolute; right: -36%; top:20%"> </iframe>
 
         <!--Nu mogelijke opdrachten aan het scouten om te behandelen-->
@@ -135,9 +135,9 @@
         <div class="push"></div>
     </div>
     <footer class="footer">
-        <button type="button" class="btn btn-primary" onclick="start_opgave1()">Vorige</button>
+        <button type="button" class="btn btn-primary" onclick="ehc_opgave(1)">Vorige</button>
         <p>Opdracht 2</p>
-        <button type="button" class="btn btn-primary" onclick="start_opgave3()">Volgende</button>
+        <button type="button" class="btn btn-primary" onclick="ehc_opgave(3)">Volgende</button>
     </footer>
 
     <div>
