--- a/pages/HTML/raaklijn4.html
+++ b/pages/HTML/raaklijn4.html
@@ -159,9 +159,9 @@
         <div class="push"></div>
     </div>
     <footer class="footer">
-        <button type="button" class="btn btn-primary" onclick="start_opgave_raaklijn3()">Vorige</button>
+        <button type="button" class="btn btn-primary" onclick="rkln_opgave(3)">Vorige</button>
         <p>Raaklijn 4</p>
-        <button type="button" class="btn btn-primary" onclick="start_opgave_raaklijn5()">Volgende</button>
+        <button type="button" class="btn btn-primary" onclick="rkln_opgave(5)">Volgende</button>
     </footer>
 
     <div>
