--- a/pages/HTML/raaklijn1.html
+++ b/pages/HTML/raaklijn1.html
@@ -163,7 +163,7 @@
     <footer class="footer">
         <button type="button" class="btn btn-primary" id="startbutton">Vorige</button>
         <p>Raaklijn 1</p>
-        <button type="button" class="btn btn-primary" onclick="start_opgave_raaklijn2()">Volgende</button>
+        <button type="button" class="btn btn-primary" onclick="rkln_opgave(2)">Volgende</button>
     </footer>
 
     <div>
