--- a/pages/HTML/raaklijn3.html
+++ b/pages/HTML/raaklijn3.html
@@ -159,9 +159,9 @@
         <div class="push"></div>
     </div>
     <footer class="footer">
-        <button type="button" class="btn btn-primary" onclick="start_opgave_raaklijn2()">Vorige</button>
+        <button type="button" class="btn btn-primary" onclick="rkln_opgave(2)">Vorige</button>
         <p>Raaklijn 3</p>
-        <button type="button" class="btn btn-primary" onclick="start_opgave_raaklijn4()">Volgende</button>
+        <button type="button" class="btn btn-primary" onclick="rkln_opgave(4)">Volgende</button>
     </footer>
 
     <div>
