--- a/pages/HTML/raaklijn5.html
+++ b/pages/HTML/raaklijn5.html
@@ -159,7 +159,7 @@
         <div class="push"></div>
     </div>
     <footer class="footer">
-        <button type="button" class="btn btn-primary" onclick="start_opgave_raaklijn4()">Vorige</button>
+        <button type="button" class="btn btn-primary" onclick="rkln_opgave(4)">Vorige</button>
         <p>Raaklijn 5</p>
         <button type="button" class="btn btn-primary" id="startbutton">Volgende</button>
     </footer>
