--- a/pages/HTML/test.html
+++ b/pages/HTML/test.html
@@ -4,12 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <!-- Script for Bootstrap -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" href="library.css">
-    <title>Placeholder | Library</title>
-    <script src="../JS/functions.js"></script>
+    <!--  -->
+    <script type="module" src="../JS/test.js"></script>
+    <link rel="stylesheet" href="./pages/CSS/index.css">
+    
+    <title>Placeholder | ...</title>
 </head>
 
 <body>
@@ -78,61 +81,7 @@
 
     <br><br><br><br>
 
-    <!-- Hier beginnen met typen. -->
-
-
-    <div class="container">
-        <h1>LESSEN</h1>
-        <div class="lesson">
-            <div class="icon">
-                <img src="../../assets/computer.png">
-            </div>
-            <div class="content">
-                <h2>Les #1</h2>
-                <p>Deze les gaat over <b>de eenheidscirkel.</b></p>
-                <span>In deze les wordt de eenheidscirkel door</span>
-                <br><span>middel van een interactief plaatje duidelijk gemaakt.</span>
-                <button class="knop" onclick="start_opgave1()">START</button>
-            </div>
-        </div>
-
-        <div class="lesson">
-            <div class="icon">
-                <img src="../../assets/computer.png">
-            </div>
-            <div class="content">
-                <h2>Les #2</h2>
-                <p>Deze les gaat over ...</p>
-                <span>beschrijving</span>
-                <button class="knop" onclick="start_opgave2()">START</button>
-            </div>
-        </div>
-
-        <div class="lesson">
-            <div class="icon">
-                <img src="../../assets/computer.png">
-            </div>
-            <div class="content">
-                <h2>Les #3</h2>
-                <p>Deze les gaat over <b>de raaklijn</b></p>
-                <span>beschrijving</span>
-                <button class="knop" onclick="rkln_opgave(1)">START</button>
-            </div>
-        </div>
-
-        <div class="lesson">
-            <div class="icon">
-                <img src="../../assets/computer.png">
-            </div>
-            <div class="content">
-                <h2>Les #4</h2>
-                <p>Deze les gaat over ...</p>
-                <span>beschrijving</span>
-                <button class="knop" onclick="start_opgave4()">START</button>
-            </div>
-        </div>
-    </div>
-
+    <!-- Hier beginnen met typen -->
 
     <!--Script for Bootstrap-->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
