--- a/pages/HTML/test.html
+++ b/pages/HTML/test.html
@@ -81,6 +81,9 @@
     <br><br><br><br>
 
     <!-- Hier beginnen met typen -->
+    <div>
+        Je punten: <span id="pointsDisplay">0</span>
+    </div>
 
     <!--Script for Bootstrap-->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
