--- a/pages/HTML/test.html
+++ b/pages/HTML/test.html
@@ -254,6 +254,14 @@
         <button id="addPointsButton">Add 10 Points</button>
     </div>
 
+
+    <div id="question-container">
+        <p id="question">Wat is de uitkomst van 2 + 2?</p>
+        <input type="text" id="answer" placeholder="Jouw antwoord">
+        <button id="ShowFunction">Controleer antwoord</button>
+        <p id="hint" style="display: none;">Hint: Denk aan een simpele optelling.</p>
+      </div>
+      
     <!--Script for Bootstrap-->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
         integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
