--- a/index.html
+++ b/index.html
@@ -89,14 +89,14 @@
 
     <div id="carouselExampleInterval" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
-          <div class="carousel-item active" data-interval="100">
-            <img src="..." class="d-block w-100" alt="...">
+          <div class="carousel-item active">
+            <img src="./assets/photo1.png" class="d-block w-100" alt="Error" style="padding: 10%; padding-top: 3%; padding-bottom: 5%;">
           </div>
           <div class="carousel-item" data-interval="100">
-            <img src="..." class="d-block w-100" alt="...">
+            <img src="./assets/photo2.png" class="d-block w-100" alt="Error2" style="padding: 10%; padding-top: 3%; padding-bottom: 5%">
           </div>
           <div class="carousel-item">
-            <img src="..." class="d-block w-100" alt="...">
+            <img src="./assets/photo3.png" class="d-block w-100" alt="Error3" style="padding: 10%; padding-top: 3%; padding-bottom: 5%">
           </div>
         </div>
     </div>
