--- a/pages/HTML/library.html
+++ b/pages/HTML/library.html
@@ -92,6 +92,7 @@
                 <p>Deze les gaat over <b>de eenheidscirkel.</b></p>
                 <span>In deze les wordt de eenheidscirkel door</span>
                 <br><span>middel van een interactief plaatje duidelijk gemaakt.</span>
+                <p id="completionMessage" style="display: none;">Congratulations, you have completed the lesson!</p>
                 <button class="knop" onclick="start_opgave1()">START</button>
             </div>
         </div>
